#101 ability to handle the requires version, minor bug fixes, bump version.